@@ -16,6 +16,8 @@ Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf
 
   Changed enable_profile() to discard the time spent since
     profile was disabled.
+  Changed NYTPROF env var parsing to allow backslash to escape
+    colons, for Windows, thanks to Joshua ben Jore.
 
   Added license, homepage, bugtracker, repository and MailingList
     resources to META.yml thanks to Michael G Schwern.
